Fix IE 11 not showing large screen content

--- a/src/assets/sass/modules/_responsive.scss
+++ b/src/assets/sass/modules/_responsive.scss
@@ -13,7 +13,7 @@
     }
 
     .screen-large {
-        display: initial; // TODO: use `display: revert` when browser support is widespread.
+        display: block; // TODO: use `display: revert` when browser support is widespread.
     }
 
     /**
